masukan semua file

--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>
-            Coba CSS
+            Heyyo
         </title>
         <link rel="icon" type="image/x-icon" href="icon.png">
     </head>
-
     <body>
-        <p>Halo Hee<a href=link1.html target="_blank">e</a>eeey</p>
+        <header>
+            <h1>Header 1</h1>
+            <nav class="navbar">
+                <a href="">Link 1</a>
+                <a href="">Link 2</a>
+                <a href="">Link 3</a>
+            </nav>
+        </header>
+        
+        <div id="main">
+            <p class="maintext2">Halo Hee<a href=link1.html target="_blank">e</a>eeey</p>
+            <p class="maintext1">Halo Hee<a href=link1.html target="_blank">e</a>eeey</p>
+
+            <div class="container1">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores consequatur quisquam, voluptates aperiam temporibus sit fuga ut facilis ad ex? Quaerat sed incidunt sapiente excepturi deleniti fuga cumque, accusamus velit?</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi saepe rem sint sunt tenetur. Nobis, quas facere natus exercitationem ipsa quos neque et voluptas dolore sed veniam expedita quia. Sapiente.</p>
+            </div>
+        </div>
+        <footer>
+            <p>&copy; felisia t</p>
+        </footer>
     </body>
 </html>
